[project]
name = "aiodns-dnspy"
version = "0.0.0"
description = "asyncio DNS library (modernized from dnspy aiodns)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest",
  "ruff",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
ignore = [
  "E501", # line length handled by formatter / pragmatic
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
